add checkout js

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -149,6 +149,7 @@
     </div>
   </footer>
   <script src="../js/utils.js"></script>
+  <script src="../js/contact.js"></script>
   <script src="../js/cart.js"></script>
 </body>
 
