add build command for npm

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -92,8 +92,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/index.js"></script>
-  <script src="../js/utils.js"></script>
+  <script src="../js/dist/index.js"></script>
 </body>
 
 </html>
