working version for milestone 10

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -148,9 +148,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/utils.js"></script>
-  <script src="../js/contact.js"></script>
-  <script src="../js/cart.js"></script>
+  <script src="../js/dist/cart.js"></script>
 </body>
 
 </html>
