--- a/front/html/index.html
+++ b/front/html/index.html
@@ -92,7 +92,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/dist/index.js"></script>
+  <script src="../js/dist/home.js"></script>
 </body>
 
 </html>
