--- a/front/html/product.html
+++ b/front/html/product.html
@@ -125,8 +125,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/utils.js"></script>
-  <script src="../js/product.js"></script>
+  <script src="../js/dist/product.js"></script>
 </body>
 
 </html>
